# aind-metadata-service

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  local_env.template  openapirc.json  openapirc_async.json  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: add_issue_to_project_board.yml  ci.yml  link-issues-by-milestone.yml  publish.yml  publish_dev.yml  publish_main.yml  publish_v1.yml  run_dev_server_tests.yml  run_dev_tests.yml  run_main_server_tests.yml  run_main_tests.yml  run_v1_server_tests.yml  tag_and_publish_main.yml  test_server.yml
aind-metadata-service-async-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-metadata-service-async-client/.openapi-generator/: FILES
aind-metadata-service-async-client/aind_metadata_service_async_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
aind-metadata-service-async-client/docs/: AindMetadataServiceServerRoutesSlimsSlimsWorkflow.md  AnyofSchema1Validator.md  AverageHitRate.md  DefaultApi.md  FovCoordinateAp.md  FovCoordinateMl.md  HTTPValidationError.md  HealthCheck.md  HealthcheckApi.md  HitRateTrials010.md  HitRateTrials2040.md  InputSource.md  JobSettings.md  JobSettingsStartingLickportPositionInner.md  OutputDirectory.md  SlimsWorkflow.md  TotalHits.md  TrialNum.md  UserSettingsConfigFile.md  ValidationError.md  ValidationErrorLocInner.md
aind-metadata-service-async-client/test/: test_aind_metadata_service_server_routes_slims_slims_workflow.py  test_anyof_schema1_validator.py  test_average_hit_rate.py  test_default_api.py  test_fov_coordinate_ap.py  test_fov_coordinate_ml.py  test_health_check.py  test_healthcheck_api.py  test_hit_rate_trials010.py  test_hit_rate_trials2040.py  test_http_validation_error.py  test_input_source.py  test_job_settings.py  test_job_settings_starting_lickport_position_inner.py  test_output_directory.py  test_slims_workflow.py  test_total_hits.py  test_trial_num.py  test_user_settings_config_file.py  test_validation_error.py  test_validation_error_loc_inner.py
aind-metadata-service-client/: README.md  pyproject.toml  setup.py  tox.ini
aind-metadata-service-server/: Dockerfile  README.md  log_config_template.yaml  mapped_list_item1.json  mapped_list_item2.json  mapped_list_item3.json  pyproject.toml
aind-metadata-service-server/src/aind_metadata_service_server/: __init__.py  configs.py  main.py  models.py  response_handler.py  route.py  sessions.py
aind-metadata-service-server/src/aind_metadata_service_server/mappers/: __init__.py  dataverse.py  funding.py  injection_materials.py  intended_measurements.py  las2020.py  mgi_allele.py  nsb2019.py  nsb2023.py  perfusion.py  perfusions.py  procedures.py  protocol.py  responses.py  rig_and_instrument.py  specimen_procedures.py  subject.py
aind-metadata-service-server/src/aind_metadata_service_server/routes/: __init__.py  dataverse.py  funding.py  healthcheck.py  index.py  injection_materials.py  intended_measurements.py  mgi_allele.py  perfusion.py  perfusions.py  procedures.py  protocol.py  rig_and_instrument.py  session_json.py  slims.py  subject.py  user_email.py  v1_proxy.py
aind-metadata-service-server/src/aind_metadata_service_server/routes/v1/: __init__.py  subject.py
aind-metadata-service-server/src/aind_metadata_service_server/templates/: index.html
aind-metadata-service-server/tests/: conftest.py  test_configs.py  test_handler.py  test_main.py  test_models.py  test_response_handler.py  test_route.py  test_session.py  test_sessions.py
aind-metadata-service-server/tests/resources/las2020/mapped/: mapped_list_item1.json  mapped_list_item2.json  mapped_list_item3.json  mapped_list_item5.json
aind-metadata-service-server/tests/resources/las2020/raw/: list_item1.json  list_item2.json  list_item3.json  list_item4.json
aind-metadata-service-server/tests/resources/nsb2019/: nsb2019_string_entries.json
aind-metadata-service-server/tests/resources/nsb2019/mapped/: mapped_list_item1.json  mapped_list_item2.json  mapped_list_item3.json  mapped_list_item4.json  mapped_list_item5.json  mapped_list_item6.json
aind-metadata-service-server/tests/resources/nsb2019/raw/: list_item1.json  list_item2.json  list_item3.json  list_item4.json  list_item5.json  list_item6.json
aind-metadata-service-server/tests/resources/nsb2023/: nsb2023_intended_measurements.json  nsb2023_string_entries.json
aind-metadata-service-server/tests/resources/nsb2023/mapped/: mapped_list_item1.json  mapped_list_item2.json  mapped_list_item3.json  mapped_list_item4.json  mapped_list_item5.json  mapped_list_item6.json
aind-metadata-service-server/tests/resources/nsb2023/raw/: list_item1.json  list_item2.json  list_item3.json  list_item4.json  list_item5.json  list_item6.json
aind-metadata-service-server/tests/resources/slims/: instrument_example.json  rig_example.json
aind-metadata-service-server/tests/resources/tars/: prep_lot_example.json  virus_data_example.json
aind-metadata-service-server/tests/test_mappers/: __init__.py  test_dataverse.py  test_funding.py  test_injection_materials.py  test_intended_measurements.py  test_las2020.py  test_mgi_allele.py  test_nsb2019.py  test_nsb2023.py  test_perfusion.py  test_procedures.py  test_protocol.py  test_responses.py  test_rig_and_instrument.py  test_specimen_procedures.py  test_subject.py
aind-metadata-service-server/tests/test_routes/: __init__.py  test_dataverse.py  test_funding.py  test_healthcheck.py  test_index.py  test_injection_materials.py  test_intended_measurements.py  test_mgi_allele.py  test_perfusion.py  test_procedures.py  test_protocol.py  test_proxy_method.py  test_rig_and_instrument.py  test_session_json.py  test_slims.py  test_subject.py  test_user_email.py  test_v1_proxy.py
doc_template/source/: conf.py  (+3 more)
scripts/: generate_openapi.py
tests/: __init__.py  conftest.py  test_client.py  test_message_handler.py  test_models.py  test_query_builder.py  test_response_handle.py  test_response_handler.py  test_responses.py  test_server.py  test_settings.py
(+518 files in other folders)
