[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_metadata_service"
description = "REST service to retrive metadata from databases."
license = {text = "MIT"}
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'pydantic-settings>=2.0',
    'pydantic>=2.10',
    'aind-metadata-mapper[bergamo]==0.21.0',
    'aind-data-schema==1.2.0',
    'typing-extensions==4.12.2'
]

[project.optional-dependencies]
dev = [
    'aind-metadata-service[server]',
    'aind-metadata-service[client]',
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
]

server = [
    'pyodbc==5.1.0',
    'office365-rest-python-client==2.4.1',
    'smartsheet-python-sdk==3.0.2',
    'fastapi==0.115.0',
    'uvicorn[standard]==0.31.0',
    'python-dateutil',
    'aind-slims-api==0.1.19',
    'azure-identity==1.15.0'
]

client = [
    'requests'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_metadata_service.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 79
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*","*server*"]
source = ["aind_metadata_service", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 79
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
